--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--//FastDFS-Client使用方式-->
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.27.2</version>
+        </dependency>
     </dependencies>
 
     <build>
